// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Pill Basic Pill 1`] = `
.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  stroke: #6E6E69;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  background: #FFFFFF;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.21);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  background: #FFFFFF;
  border: 0;
  margin: 0;
  padding: 2px 6px;
  cursor: pointer;
}

<div
  className="c0"
>
  <button
    className="c1"
    title="Edit this selection"
    type="button"
  >
    1234
  </button>
  <button
    className="c1"
    title="Remove this selection"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="c2"
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        className="c3"
        d="m 1 1 l 22 22 m -22 0 l 22 -22"
        strokeWidth={2}
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Atoms | Pill Pill with colored bar 1`] = `
.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  stroke: #6E6E69;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  background: #FFFFFF;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.21);
  border-left: 4px solid #282823;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  background: #FFFFFF;
  border: 0;
  margin: 0;
  padding: 2px 6px;
  cursor: pointer;
}

<div
  className="c0"
>
  <button
    className="c1"
    title="Edit this selection"
    type="button"
  >
    123
  </button>
  <button
    className="c1"
    title="Remove this selection"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="c2"
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        className="c3"
        d="m 1 1 l 22 22 m -22 0 l 22 -22"
        strokeWidth={2}
      />
    </svg>
  </button>
</div>
`;
